--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
-	background: skyblue; /*add image*/
+	background: skyblue url("../images/background.jpg");
 	max-width: 100%;
+	font-family: "Boogaloo", Arial, Verdana;
 }
 
 img {
@@ -10,4 +11,29 @@ img {
 
 .stage-2, .stage-3, .stage-4 {
 	display: none;
+}
+
+.row {
+	max-width: 100%;
+}
+
+ .transparency-wrapper {
+	background-color: rgba(255, 255, 255, .7);
+	height: 100vh;
+}
+
+header h3 {
+	line-height: 0;
+}
+
+header {
+	margin-bottom: 40px;
+}
+
+p {
+	font-size: 18px;
+}
+
+.button-text {
+	margin: 0;
 }
