--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
+/* Basic styles */
 body {
 	background: skyblue url("../images/background.jpg");
-	max-width: 100%;
 	font-family: "Boogaloo", Arial, Verdana;
+	max-width: 100%;
+}
+
+.row {
+	max-width: 100%;
 }
 
 img {
@@ -9,31 +14,49 @@ img {
 	width: 100%;
 }
 
-.stage-2, .stage-3, .stage-4 {
-	display: none;
-}
-
-.row {
-	max-width: 100%;
-}
-
- .transparency-wrapper {
+/* A semi-transparent box over the background.*/
+.transparency-wrapper {
+	background-color: lightgray;
 	background-color: rgba(255, 255, 255, .7);
 	height: 100vh;
 }
 
-header h3 {
-	line-height: 0;
+/* Divs are sorted by stage in the game. Only stage-1 shows initially. */
+.stage-2, .stage-3, .stage-4 {
+	display: none;
+}
+
+/* Font sizes */
+p {
+	font-size: 24px;
+}
+
+h1 {
+	font-size: 100px;
+}
+
+h2 {
+	font-size: 84px;
+}
+
+h3 {
+	font-size: 48px;
+}
+
+h4 {
+	font-size: 36px;
 }
 
 header {
 	margin-bottom: 40px;
 }
 
-p {
-	font-size: 18px;
-}
-
+/* Button styles */
 .button-text {
 	margin: 0;
+}
+
+/* Push attack button down. */
+.btn-danger {
+	margin-top: 50%;
 }
